# llm-evaluation-guardrails-gemini

./: .env  check_chroma.py  main.py  pyproject.toml  ragas_eval.py
guardrails/: config.yml  rails_app.py
