[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "deepagents>=0.6.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=3.1.0",
    "langchain-google-vertexai>=3.2.4",
    "langchain-text-splitters>=1.1.2",
    "langchain>=1.3.12",
    "nemoguardrails>=0.23.0",
    "numpy>=2.5.1",
    "python-dotenv>=1.2.2",
    "ragas==0.3.9",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
]
